--- a/llama-index-experimental/pyproject.toml
+++ b/llama-index-experimental/pyproject.toml
@@ -31,6 +31,7 @@ version = "0.3.0"
 python = ">=3.8.1,<4.0"
 llama-index-core = "^0.11.0"
 pandas = "*"
+duckdb = "1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "8.10.0"
